Final website tweaks

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
   The fast native Clojure scripting runtime
 </p>
 
+<p id="smalltext">
+  The official Babashka homempage is on <a href="https://babashka.org/">babashka.org</a>.
+  If this unofficial installer fails, try the official installer.
+</p>
+
 <div id="platform-instructions-unix" class="instructions display-block">
   <p>Run the following in your terminal:</p>
     <div class="copy-container">
@@ -73,27 +78,6 @@
       </button>
     </div>
   </div>
-
-  <hr>
-
-  <div>
-    <p>
-      If you are running Windows 64-bit,<br>download and run
-      <a class="windows-download" href="https://win.rustup.rs/x86_64">rustup‑init.exe</a>
-      then follow the onscreen instructions.
-    </p>
-  </div>
-
-  <hr>
-
-  <div>
-    <p>
-      If you are running Windows 32-bit,<br>download and run
-      <a class="windows-download" href="https://win.rustup.rs/i686">rustup‑init.exe</a>
-      then follow the onscreen instructions.
-    </p>
-  </div>
-
 </div>
 
 <div id="platform-instructions-default" class="instructions display-none">
