--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <title>bbup - Get started with Babashka quickly</title>
-  <meta name="keywords" content="Rust, Rust programming language, rustlang, rust-lang, Mozilla Rust, rustup">
-  <meta name="description" content="The Rust toolchain installer">
+  <meta name="keywords" content="Babashka, Clojure, bbin, bbup">
+  <meta name="description" content="The one step Babashka installer">
   <link rel="stylesheet" href="bbup_files/normalize.css">
   <link rel="stylesheet" href="bbup_files/rustup.css">
 </head>
