--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>bbup - Get started with Babashka quickly</title>
+  <title>bbup - The one step Babashka+bbin installer</title>
   <meta name="keywords" content="Babashka, Clojure, bbin, bbup">
-  <meta name="description" content="The one step Babashka installer">
+  <meta name="description" content="The one step Babashka+bbin installer">
   <link rel="stylesheet" href="bbup_files/normalize.css">
   <link rel="stylesheet" href="bbup_files/rustup.css">
 </head>
