Remove button that doesn't work

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <div id="copy-status-message-unix" class="copy-button-text">Copied!</div>
       </button>
     </div>
-  <p class="other-platforms-help">You appear to be running Unix. If not, <a class="default-platform-button" href="#">display all supported installers</a>.</p>
+  <p class="other-platforms-help">
+    You appear to be running Unix.
+  </p>
 </div>
 
 <div id="platform-instructions-unknown" class="instructions display-none">
