Warn: doesn't quite work yet

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </a>
 
 <p id="pitch">
+  Warning: bbup doesn't quite work yet!
+  <br><br>
   <em>bbup</em> is an installer for<br>
   <a href="https://babashka.org/">Babashka</a><br>
   The fast native Clojure scripting runtime
