Refer to source

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <p id="pitch">
   Warning: bbup doesn't quite work yet!
+  Source: <a href="https://github.com/teodorlu/bbup.teod.eu">github.com/teodorlu/bbup.teod.eu</a>.
   <br><br>
   <em>bbup</em> is an installer for<br>
   <a href="https://babashka.org/">Babashka</a><br>
