--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </div>
 
 <p id="about">
-  bbup is not affiliated with Babashka, but made on an afternoon by <a href="https://teod.eu/">Teodor</a>.
+  bbup is not affiliated with Babashka, but quickly put together by <a href="https://teod.eu/">Teodor</a>.
   Got comments?
   Please ping <code>@teodorlu</code> in <code>#babashka</code> on the <a href="clojurians.slack.com/">Clojurians Slack!</a>
 </p>
