Remove "doesn't work" message

--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
 </a>
 
 <p id="pitch">
-  Warning: bbup doesn't quite work yet!
-  Source: <a href="https://github.com/teodorlu/bbup.teod.eu">github.com/teodorlu/bbup.teod.eu</a>.
-  <br><br>
   <em>bbup</em> is an installer for<br>
   <a href="https://babashka.org/">Babashka</a><br>
   The fast native Clojure scripting runtime
@@ -102,7 +99,8 @@
 <p id="about">
   bbup is not affiliated with Babashka, but quickly put together by <a href="https://teod.eu/">Teodor</a>.
   Got comments?
-  Please ping <code>@teodorlu</code> in <code>#babashka</code> on the <a href="clojurians.slack.com/">Clojurians Slack!</a>
+  Please ping <code>@teodorlu</code> in <code>#babashka</code> on the <a href="clojurians.slack.com/">Clojurians Slack</a>!
+  Source: <a href="https://github.com/teodorlu/bbup.teod.eu">github.com/teodorlu/bbup.teod.eu</a>.
 </p>
 
 <p id="rustup-message">This site was based on <a href="https://rustup.rs/">Rustup.rs</a>. Thanks for being awesome! If you don't approve of copying, please let <a href="https://teod.eu/">Teodor</a> know.</p>
