Better install instructions

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </p>
 
 <p id="smalltext">
-  The official Babashka homempage is on <a href="https://babashka.org/">babashka.org</a>.
-  If this unofficial installer fails, try the official installer.
+  bbup is not affiliated with Babashka.
+  The official Babashka homempage and installation instructions are found on <a href="https://babashka.org/">babashka.org</a>.
 </p>
 
 <div id="platform-instructions-unix" class="instructions display-block">
@@ -97,8 +97,8 @@
 </div>
 
 <p id="about">
-  bbup is not affiliated with Babashka, but quickly put together by <a href="https://teod.eu/">Teodor</a>.
-  Got comments?
+  bbup is <a href="https://teod.eu/">Teodor</a>'s attempt to ease the getting started experience for Babashka.
+  Got comments, feedback or ideas?
   Please ping <code>@teodorlu</code> in <code>#babashka</code> on the <a href="clojurians.slack.com/">Clojurians Slack</a>!
   Source: <a href="https://github.com/teodorlu/bbup.teod.eu">github.com/teodorlu/bbup.teod.eu</a>.
 </p>
