Rewrite motivation text

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </a>
 
 <p id="pitch">
-  <em>bbup</em> is an installer for<br>
-  <a href="https://babashka.org/">Babashka</a><br>
-  The fast native Clojure scripting runtime
+  <em>bbup</em> is a one click installer for<br>
+  <a href="https://babashka.org/">Babashka</a> and <a href="https://github.com/babashka/bbin">babashka/bbin</a><br>
+  The fast native Clojure scripting runtime and its script installer
 </p>
 
 <p id="smalltext">
@@ -98,10 +98,21 @@
 </div>
 
 <p id="about">
-  bbup is <a href="https://teod.eu/">Teodor</a>'s attempt to ease the getting started experience for Babashka.
+  I love using Babashka, and I'd love to share the experience of writing and using babashka scripts with more people.
+  But I've struggled with the install.
+  What is babashka?
+  Is it Clojure?
+  Why do I have to install something else than Clojure to run Clojure?
+  Why do I need to install bbin?
+  And why does it require Java?
+  <br>
+  <br>
+  bbup is my attempt to help fix this.
   Got comments, feedback or ideas?
   Please ping <code>@teodorlu</code> in <code>#babashka</code> on the <a href="clojurians.slack.com/">Clojurians Slack</a>!
   Source: <a href="https://github.com/teodorlu/bbup.teod.eu">github.com/teodorlu/bbup.teod.eu</a>.
+  <br>
+  — <a href="https://teod.eu/">Teodor</a>
 </p>
 
 <p id="rustup-message">This site was based on <a href="https://rustup.rs/">Rustup.rs</a>. Thanks for being awesome! If you don't approve of copying, please let <a href="https://teod.eu/">Teodor</a> know.</p>
