Babashka, not babashka

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <p id="about">
   I love using Babashka, and I'd love to share the experience of writing and using babashka scripts with more people.
   But I've struggled with the install.
-  What is babashka?
+  What is Babashka?
   Is it Clojure?
   Why do I have to install something else than Clojure to run Clojure?
   Why do I need to install bbin?
