--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div id="platform-instructions-unix" class="instructions display-block">
   <p>Run the following in your terminal:</p>
     <div class="copy-container">
-      <pre class="rustup-command">curl --proto '=https' --tlsv1.2 -sSf https://bbup.teod.eu/install.sh | sh</pre>
+      <pre class="rustup-command">curl --proto '=https' --tlsv1.2 -sSf https://bbup.teod.eu/install.sh | bash</pre>
       <button id="copy-button-unix" class="copy-button" title="Copy curl command to clipboard to download bbup" type="button">
         <div class="copy-icon">
           <svg width="24" height="25" viewBox="0 0 24 25" xmlns="http://www.w3.org/2000/svg" alt="Copy curl command to clipboard to download Rustup">
@@ -65,7 +65,7 @@
   <div>
     <p>If you are running Unix,<br>run the following in your terminal, then follow the onscreen instructions.</p>
     <div class="copy-container">
-      <pre class="rustup-command">curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh</pre>
+      <pre class="rustup-command">curl --proto '=https' --tlsv1.2 -sSf https://bbup.teod.eu/install.sh | bash</pre>
       <button id="copy-button-unknown" class="copy-button" title="Copy curl command to clipboard to download Rustup" type="button">
         <div class="copy-icon">
           <svg width="24" height="25" viewBox="0 0 24 25" xmlns="http://www.w3.org/2000/svg" alt="Copy curl command to clipboard to download Rustup">
@@ -83,7 +83,7 @@
     <p>To install Rust, if you are running Unix,<br>run the following
     in your terminal, then follow the onscreen instructions.</p>
     <div class="copy-container">
-      <pre class="rustup-command">curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh</pre>
+      <pre class="rustup-command">curl --proto '=https' --tlsv1.2 -sSf https://bbup.teod.eu/install.sh | bash</pre>
       <button id="copy-button-default" class="copy-button" title="Copy curl command to clipboard to download Rustup" type="button">
         <div class="copy-icon">
           <svg width="24" height="25" viewBox="0 0 24 25" xmlns="http://www.w3.org/2000/svg" alt="Copy curl command to clipboard to download Rustup">
