--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
   — <a href="https://teod.eu/">Teodor</a>
 </p>
 
-<p id="rustup-message">This site was based on <a href="https://rustup.rs/">Rustup.rs</a>. Thanks for being awesome! If you don't approve of copying, please let me know.</p>
+<p id="rustup-message">
+  This site was based on <a href="https://rustup.rs/">Rustup.rs</a>. Thanks for being awesome! If you don't approve of copying, please let me know.
+  Test.
+</p>
 
 <script src="bbup_files/rustup.js"></script>
 </body></html>
