BBUP is not ready for general usage.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   click or press "n" to cycle platforms
 </a>
 
+<p>
+  bbup is not yet ready for general usage.
+  See <a href="https://github.com/teodorlu/bbup.teod.eu/issues">github issues</a>.
+</p>
+
 <p id="pitch">
   <em>bbup</em> is a one click installer for<br>
   <a href="https://babashka.org/">Babashka</a> and <a href="https://github.com/babashka/bbin">babashka/bbin</a><br>
