--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <p>
   bbup is not yet ready for general usage.
   See <a href="https://github.com/teodorlu/bbup.teod.eu/issues">github issues</a>.
+  Help welcome!
 </p>
 
 <p id="pitch">
