not yet ready, help welcome

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <p>
   bbup is not yet ready for general usage.
-  See <a href="https://github.com/teodorlu/bbup.teod.eu/issues">github issues</a>.
+  See the <a href="https://gist.github.com/pesterhazy/b0d1864c1118bfca9202ca06f65eb886?permalink_comment_id=4588878#gistcomment-4588878">cljup babashka-conf BOF session description</a>
+  or
+  <a href="https://github.com/teodorlu/bbup.teod.eu/issues">the github issues</a>.
   Help welcome!
 </p>
 
